src/app/style/_global.scss
/*
 * Copyright (C) 2017 HAT Data Exchange Ltd - All Rights Reserved
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 * Written by Augustinas Markevicius <augustinas.markevicius@hatdex.org> 2, 2017
 */

@import "variables";
@import "bootstrap/mixins/grid";

body {
  font-size: 12px;
  font-family: $font-standard;
  min-width: 320px;
  background-color: $app-background-color;
}

h1, h2, h3, h4, h5, h6, div, p, a, ul, ol, li, blockquote, span
.tile-header,
.section-title {
  font-family: $font-standard;
}

i{
  user-select: none;
}

@keyframes showNotifs {
   from {margin-top: -100px;}
   to {margin-top: 0px;}
}

.notifications-wrapper{
    background-color: $app-mid-tone;
    height: 100px;
    width: 100%;
    top: -100px;
}



.content-main-authenticated{
  margin-left: 345px;
  top: 106px;
  position: relative;

  @media screen and (max-width: 1113px) {
      margin-left: 0px;
  }

  .content-grid {
    overflow: hidden;
    color: white;
    padding-left: 0;
    padding-right: 0;
  }

  .grid {
    width: 100%;
    height: auto;
    margin-right: 0;
    margin-left: 0;
  }
}

.content-main-not-authenticated{
  margin-left: 0px !important;
}


.responsive {
  @include make-xs-column(12);
  @include make-sm-column(10);
  @include make-sm-column-offset(1);
  @include make-md-column(6);
  @include make-md-column-offset(3);
}

.login-form {
  text-align: center;
  font-family: $font-standard;
  font-weight: 300;

  .logo {
    height: 6em;
    margin-top: 2em;
    margin-right: auto;
    margin-left: auto;
  }

  p {
    color: white;
    font-size: 1.8em;
    margin-top: 1.5em;

    &.subtext {
      font-size: 1.4em;
    }
  }

  .highlight {
    font-weight: 600;
  }
}

button.btn-view-header {
  background-color: transparent;
  margin: 0;
  padding: 0;
  border: 2px solid white;
  outline: none;
  float: left;

  label {
    font-weight: normal;
    margin-bottom: 0;
    cursor: pointer;
    padding: 0.75em 2em;
  }

  &.empty {
    padding: 0.75em 2em;
    color: $app-dark-tone;
  }

  &:hover {
    background-color: rgba(255, 255, 255, 0.3);
  }

  &.selected {
    background-color: white;
    color: #37474F;
    border: 2px solid #CFD8DC;
  }
}

.view-header {
  min-height: 5em;
  background-color: #37474F;
  color: $app-background-color;
  padding: 1em;
  font-size: 1em;

  input[type="radio"],
  input[type="checkbox"] {
    display: none;
  }

  h2 {
    text-transform: uppercase;
    display: inline-block;
    font-size: 1.75em;
    margin: 0.4em 0;
  }

  .inline-btn-group {
    float: right;
  }

  .view-controls {
    margin-left: 3em;
  }
}

.timeline {
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  height: 73em;
  top: 0;
  right: 0;
  z-index: 5550;
  overflow: auto;
}

.btn {
  font-family: $font-standard;
  border-radius: 0;

  -webkit-box-shadow: none !important;
  box-shadow: none !important;

  &:active,
  &:focus,
  &:hover {
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
  }

}

.btn-rump {
  background-color: $app-mid-tone;
  border: 2px solid $app-mid-tone;
  color: white;

  &:active,
  &:focus,
  &:hover {
    background-color: lighten($app-mid-tone, 5%);
    border: 2px solid lighten($app-mid-tone, 5%);
    color: white;
    outline: none;
  }

  &.sm {
    font-size: 1em;
    margin: 0.75em 0;
    padding: 0.5em 2em;
  }

  &.md {
    font-size: 1.5em;
    margin: 1em 0;
    padding: 0.75em 4em;
  }

  &.fading {
    -webkit-transition-duration: 0.25s;
    -moz-transition-duration: 0.25s;
    -o-transition-duration: 0.25s;
    transition-duration: 0.25s;

    -webkit-transition-property: #{"color, background-color"};
    -moz-transition-property: #{"color, background-color"};
    -o-transition-property: #{"color, background-color"};
    transition-property: #{"color, background-color"};
  }
}

.btn-cancel {
  background-color: transparent;
  border: 2px solid $app-dark-tone;
  color: $app-dark-tone;

  &.sm {
    font-size: 1em;
    margin: 0.75em 0;
    padding: 0.5em 2em;
  }

  &.md {
    font-size: 1.5em;
    margin: 1em 0;
    padding: 0.75em 4em;
  }
}

.btn-white {
  float: right;
  border: 1px solid white;

  &.sm {
    padding: 0.5em 0.7em;
    margin: 0 0.5em;
  }
}

.input-rump {
  border-radius: 0;
  border: 1px solid #c7c7c7;
  outline: none;
  -webkit-transition: all 0.30s ease-in-out;
  -moz-transition: all 0.30s ease-in-out;
  -o-transition: all 0.30s ease-in-out;
  transition: all 0.30s ease-in-out;


  &::-webkit-input-placeholder,
  &::-moz-placeholder,
  &:-ms-input-placeholder,
  &:-moz-placeholder {
    font-weight: normal;
  }

  &:focus {
    box-shadow: 0 0 5px $app-mid-tone;
  }

  &.lg {
    font-size: 1.6em;
    height: 50px;
  }
}

.rump-lg {
  font-size: 1.5em;
  height: 3em;
}

.rump-md {
  font-size: 1.25em;
  height: 3em;
}

.rump-sm {
  font-size: 0.75em;
  height: 1.5em;
}

.bulletless-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.icon-text-valign {
  display: inline-block;
  span {
    vertical-align: middle;
  }
}

.badge{
  background-color: $app-contrast-color;
  color: $app-dark-tone;

  float: right;
  margin-top: 4px;
  font-weight: normal;
  min-width: 24px;

}

.notif-badge{
  min-width: 24px;
  min-height: 24px;
  padding: 3px;
  position: relative;
  top: -50px;
  right: 0px;
  border: 3px solid $app-dark-tone;
  border-radius: 12px;
}







.popover{
  z-index: 9000;
}

.popover-content{
  color: $app-dark-tone;
  z-index: 9999;
}


.content-bg{
  background-color: $app-light-background-color;

  @media screen and (max-width: $screen-sm) {
      background-color: unset;
  }
}

.content-header{
  background-color:$app-light-tone ;
  color: $app-mid-tone;
  border-top-right-radius: 8px;
  border-top-left-radius: 8px;

  @media screen and (max-width: $screen-sm) {
    border-bottom-right-radius: 8px;
    border-bottom-left-radius: 8px;
  }

  .col-md-12{
    padding: 0;
  }
}

.view-header{
  background-color: unset;
  h4{
    color: $app-mid-tone;
    text-transform: none;
    font-family: $font-standard;
    display: inline-block;
    margin-left: 5px;
  }

  .info-button{
    color: $app-mid-tone;
    margin-left: 10px;
    top: 6px;
    position: relative;
    margin-right: 5px;

    &:focus {
      outline: none;
    }

    &:hover{
      color: $app-mid-tone;
    }
  }
}

.switch-label{
  color: $app-mid-tone;
  text-transform: none;
  font-family: $font-standard;
}



.no-scroll{
  overflow-y: hidden;
  position: fixed;
}




rump-offer-modal{
   position: relative;
   z-index: 2000;
}

rump-confirm-box, rump-info-box, rump-dialog-box{
   position: relative;
   z-index: 3000;
}


.popover-content{
  font-size: 12px;
}

